# PocketAnalyst

./: .gitignore  Dockerfile.test  Makefile  README.md  docker-compose.backend.yml  docker-compose.yml  go.mod  main.go
api/: Dockerfile  app.go  go.mod
api/internal/app/: app.go
api/internal/controllers/: stock_controller.go
api/internal/models/: company.go  data_fetch_job.go  data_source.go  doc.go  job_execution_log.go  stock.go
api/internal/repositories/: data_source_repository.go  doc.go  stock_repository.go
api/internal/services/: stock_service.go
api/pkg/clients/: alphavantage_client.go  alphavantage_client_test.go  base_client.go  factory.go  fmp_client.go  fmp_client_test.go  interfaces.go
api/pkg/errors/: common.go  doc.go  validation.go
api/pkg/errors/client_errors/: clienterrors.go
api/server/: main.go
clients/: alphavantage_client.go  alphavantage_client_test.go  doc.go
controllers/: stock_controller.go
database/: insert_data_source.sql  schema.sql
errors/client_errors/: clienterrors.go
ml/: .gitignore  pyproject.toml  pyrightconfig.json  requirements.txt
ml/src/data/: loaders.py  preprocessors.py
ml/src/features/: __init__.py  technical.py
ml/test/: conftest.py  test_technical_indicators.py
ml/tests/: conftest.py  test_technical_indicators.py
models/: company.go  data_fetch_config.go  data_fetch_job.go  data_source.go  indicator.go  model_training_history.go  prediction.go  stock.go
repositories/: data_source_repository.go  stock_repository.go  stock_repository_test.go
scripts/: run-tests.sh
services/: stock_service.go
store/: schema.sql
test-reports/: coverage-clients-func.txt  coverage-clients.html  coverage-clients.out
