[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketanalyst-ml"
version = "0.1.0"
description = "Machine learning components for PocketAnalyst"
authors = [{name = "Alex", email = "alex.ruperto@javierlabs.com"}]
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy", 
    "scikit-learn",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
]

[tool.setuptools]
package-dir = {"pocketanalyst_ml" = "src"}
packages = ["pocketanalyst_ml", "pocketanalyst_ml.features", "pocketanalyst_ml.models", "pocketanalyst_ml.data", "pocketanalyst_ml.prediction", "pocketanalyst_ml.training", "pocketanalyst_ml.utils"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config", 
    "--import-mode=importlib",
    "--tb=short"
]
testpaths = ["tests"]
pythonpath = ["src"]

# Logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# File logging
log_file = "../test-reports/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(filename)s:%(lineno)d - %(funcName)s(): %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# ML-specific markers
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU support (deselect with '-m \"not gpu\"')",
    "model_training: marks tests as involving actual model training (deselect with '-m \"not model_training\"')"
]

# Filter warnings from ML libraries
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:sklearn.*",
    "ignore::FutureWarning:pandas.*",
    "ignore::numpy.VisibleDeprecationWarning",
    "ignore::RuntimeWarning:tensorflow.*"
]
